--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -43,6 +43,10 @@ button{
     height: 30px;
 }
 
+button:hover{
+    cursor: pointer;
+}
+
 .cardtext-input{
     width: 300px;
     height: 100px;
@@ -74,7 +78,9 @@ button{
     box-sizing: border-box;
 }
 
-body{
-    width: 100vw;
-    height: 100vh;
+select{
+    width: 200px;
+    height: 30px;
+    border-radius: 4px;
+    border: 1px solid #bcbcbc;
 }
