--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -4,14 +4,14 @@
     <form method="POST" action="/search">
       <input placeholder="Search..." name="search" class="search-input" />
       <select name="searchoption">
-        <option name="name">Name</option>
-        <option name="item">Item</option>
+        <option name="name">name</option>   <!-- By changing this value to a script and submitting, it will allow for an XSS attack-->
+        <option name="item">note</option>
       </select>
       <button type="submit">Search</button>
     </form>
   </div>
   <div>
-    Your search for the {{{search}}} returned {{{count}}} results.
+    Your search for the {{{search}}} {{querySearch}} returned {{{count}}} results.    <!-- By changing the query you can enable a XSS here as well-->
     {{#if results}}
       <div class="search-list">
         {{#each results}}
